# tockerdui

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  dev.sh  install.sh  main.py  model.py  pyproject.toml  requirements.txt  run.sh  todo.md  ui.py  uninstall.sh  update.sh
.github/workflows/: test.yml
src/tockerdui/: __init__.py  __main__.py  backend.py  cache.py  config.py  main.py  main_actions.py  main_bulk.py  model.py  state.py  stats.py  textual_app.py  ui.py
tests/: test_backend.py  test_coverage_improvements.py  test_main_integration.py  test_new_features.py  test_regressions.py  test_safety_and_actions.py  test_smoke.py  test_state.py
