[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tockerdui"
version = "0.1.0"
authors = [
  { name="Jacopo" },
]
description = "A terminal-based Docker Desktop alternative"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console :: Curses",
]
dependencies = [
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
    "bandit>=1.7",
    "safety>=2.3",
]

[project.urls]
"Homepage" = "https://github.com/phoskee/tockerdui"
"Bug Tracker" = "https://github.com/phoskee/tockerdui/issues"

[project.scripts]
tockerdui = "tockerdui.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tockerdui*"]
